# SE333_Final-Project

./: README.md  assignment3_jacoco_report.xml  demo.py  example_jacoco_report.xml  main.py  pyproject.toml  server.py
.github/prompts/: tester.prompt.md
.github/workflows/: check.yml
jacoco_test_generator/: __init__.py  coverage_parser.py  git_tools.py  server.py  test_generator.py
jacoco_test_generator/generated_tests/Assignment3/src/test/java/org/example/Resource/org/example/Resource/: BuggyFileTest.java
